adjust deltek importer for stats imported as 0 which were being nulled out on save, convert "zero" to "0" when displaying stat on frontend

--- a/templates/partials/media-blocks/_stat.html
+++ b/templates/partials/media-blocks/_stat.html
@@ -1,5 +1,6 @@
 {% set substitutions = {
-  '%': '<span class="percent">%</span>'
+  '%': '<span class="percent">%</span>',
+  'zero': '0'
 } %}
 
 {% if block.statFigure2 %}
