--- a/templates/partials/_secondary-header.html
+++ b/templates/partials/_secondary-header.html
@@ -2,14 +2,14 @@
 <div class="hero-wrap">
   <div class="hero-image image-wrap">
     {% if headerImage %}
-      <div class="lazy image -top-weight" style="background-image: url('');" data-original="{{ headerImage.getUrl('header') }}"></div>
+      <div class="lazy image" style="background-image: url('');" data-original="{{ headerImage.getUrl('header') }}"></div>
     {% endif %}
   </div>
   <div class="row -halves">
     <div class="row-block -right">
       <div class="module text-module background-{{ (headerColor ?? null) ? headerColor|lower : 'black' }} text-white font-smoothing">
         <h1 class="font-h2 no-margin">{{ headerTitle }}</h1>
-        {% if headerSubtitle ?? false %}<h2 class="font-captions no-margin">{{ headerSubtitle }}</h2>{% endif %}
+        {% if headerSubtitle ?? false %}<h2 class="font-details no-margin">{{ headerSubtitle }}</h2>{% endif %}
       </div>
     </div>
   </div>
