--- a/web/assets/scss/components/_header.scss
+++ b/web/assets/scss/components/_header.scss
@@ -31,15 +31,16 @@
     display: flex;
     height: 16*$beat;
     position: absolute;
-    transition: opacity 0.2s;
+    transition: opacity 0.2s, height 0.2s;
 
-    &.-unstuck {
+    &.-stuck {
       width: 66.67%;
       position: fixed;
     }
 
     &.-scrolled {
       opacity: 0;
+      height: 100px;
     }
     &.-scrolling-up {
       opacity: 1;
@@ -61,6 +62,12 @@
         @include font-smoothing;
         display: inline-block;
       }
+    }
+  }
+
+  @include media-xl {
+    &.-stuck {
+      width: calc(100% - #{$nav-max-width});
     }
   }
 }
