Add hanging quotes and arrows to quote carousels; Fix home link

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -21,7 +21,7 @@
             <a href="/contact/">Contact</a>
           </li>
           <li class="secondary-links-item {{ active('', 'url', 'current') }} home-link">
-            <a href="/contact/">Home</a>
+            <a href="/">Home</a>
           </li>
         </ul>
       </div>
