--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -252,7 +252,59 @@
 }
 
 // Quote Carousel
+// Blockquotes currently use a negative-margin with compensatory padding to create hanging quotes.  In the carousel that will effect sizing, so we remove the negative margin and instead adjust the module padding
+.quotes-module {
+  padding: $padding $padding $padding #{$padding - 8px};
+
+  @include media-lg {
+    padding: $padding $padding $padding #{$padding - 12px};
+  }
+
+  blockquote {
+    margin: 0;
+  }
+}
+
 .quote-carousel {
+  position: relative;
+  padding-bottom: $padding*2;
+
+  .next, .prev {
+      bottom: 0;
+      left: 8px;
+      cursor: pointer;
+      position: absolute;
+
+      @include media-md {
+        left: 12px;
+      }
+
+      .icon {
+        width: 20px;
+        height: 15px;
+        fill: $black;
+        transition: transform 0.1s $ease;
+      }
+  }
+
+  .prev {
+    &:hover {
+      .icon { transform: translateX(-5px); }
+    }
+  }
+
+  .next {
+    margin-left: $padding*2;
+
+    @include media-md {
+      margin-left: $padding;
+    }
+
+    &:hover {
+      .icon { transform: translateX(5px); }
+    }
+  }
+
   &.-unslicked {
     blockquote {
       display: none;
