--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -28,21 +28,24 @@
         {% endif %}
       </div>
     </div>
-    <div class="row -halves secondary-page-intro">
+
+    <div class="row -use-float -halves">
+      <div class="row-block -right">
+        <div class="text-module background-{{ (headerColor ?? null) ? headerColor|lower : 'black' }} text-white font-smoothing">
+          <h1 class="font-h2 no-margin">{{ headerTitle }}</h1>
+          {% if headerSubtitle ?? false %}<h2 class="font-details no-margin">{{ headerSubtitle }}</h2>{% endif %}
+        </div>
+      </div>
       <div class="row-block">
         <div class="page-intro module text-module background-white text-black">
           {% if entry.personQuote %}
-            <blockquote class="page-quote">&ldquo;{{ entry.personQuote }}&rdquo;</blockquote>
+            <blockquote class="page-quote"><span class="hang">&ldquo;</span>{{ entry.personQuote }}&rdquo;</blockquote>
           {% endif %}
           <div class="user-content">{{ entry.body }}</div>
         </div>
       </div>
       <div class="row-block">
-        <div class="text-module background-{{ (headerColor ?? null) ? headerColor|lower : 'black' }} text-white font-smoothing">
-          <h1 class="font-h2 no-margin">{{ headerTitle }}</h1>
-          {% if headerSubtitle ?? false %}<h2 class="font-details no-margin">{{ headerSubtitle }}</h2>{% endif %}
-        </div>
-        <div class="meta  ">
+        <div class="meta">
           {% if entry.phoneNumber %}
             <div class="meta-item -half {% set nHalf = nHalf ?? 0 + 1  %}{{ cycle (['-row-end',''], nHalf) }}">
               <h3>Phone</h3>
