--- a/web/assets/scss/components/_rows.scss
+++ b/web/assets/scss/components/_rows.scss
@@ -3,9 +3,33 @@
   display: flex;
   flex-wrap: wrap;
 
+  // In special cases, particularly the person page, use float instead of flexbox
+  &.-use-float {
+    &, &.-halves {
+      display: block;
+      @include clearfix
+      .row-block {
+        float: left;
+
+        &.-right {
+          margin: 0;
+          float: right;
+        }
+      }
+    }
+  }
+
   .row-block {
+    order: 0;
     display: block;
     position: relative;
+
+    &.last-on-sm {
+      order: 1;
+      @include media-md {
+        order: 0;
+      }
+    }
 
     .module {
       @include media-md {
