remove several title fields to use SEO titles from new plugin, redirect missing project URLs to homepage

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -65,7 +65,7 @@
           <div class="heading">
             <label><input type="checkbox" name="import-mode" value="refresh"> Refresh From Deltek</label>
             <div class="instructions">
-              <p>If checked, will add new media blocks for existing projects & impact posts</p>
+              <p>If checked, will add new media blocks for existing unpublished projects & impact posts, or drafts of existing posts</p>
             </div>
           </div>
         </div>
