add BEFORE_SAVE_ELEMENT hook that sets all deltekIdsImported from mediaBlock fields for projects + impact, remove setting deltekIdsImported during deltek import, add one-time service to update all deltekIds for existing posts, add index for impact and expertise for setting SEO fields, override seo_description on expertise market pages, add google analtyics to head if production, add redirect for old site URLs like index.php/09390-00 so we can match in redirect plugin

--- a/templates/expertise/index.html
+++ b/templates/expertise/index.html
@@ -16,6 +16,7 @@
 
   {% set title = category.title %}
   {% set subheader = category.body %}
+  {% set seo_description = category.body|striptags %}
   {% set stats = craft.entries.section('stats').relatedTo(category).orderBy('RAND()').limit(2).all() %}
 
   {# Find Market Contacts and Offices #}
