--- a/web/assets/scss/helpers/_typography.scss
+++ b/web/assets/scss/helpers/_typography.scss
@@ -111,6 +111,9 @@
 @mixin font-p {
   @include formular-regular;
   @include paragraph-style (16.5, 24, $ls: -.025em);
+  @include media-xl {
+    @include paragraph-style(22, 32, $ls: -.025em);
+  }
 }
 
 @mixin font-h1 {
@@ -118,6 +121,9 @@
   @include paragraph-style (22, 32, $ls: -.025em);
   @include media-lg {
     @include paragraph-style (33, 40, $ls: -.025em);
+  }
+  @include media-xl {
+    @include paragraph-style(44, 56, $ls: -.025em);
   }
 }
 
@@ -133,12 +139,12 @@
 
 @mixin font-captions {
   @include formular-regular;
-  @include paragraph-style (12, 24, $ls: .075em);
+  @include paragraph-style (12, 24, $ls: .025em);
 }
 
 @mixin font-buttons {
   @include formular-regular;
-  @include paragraph-style (12, 16, $ls: .075em);
+  @include paragraph-style (12, 16, $ls: .025em);
 }
 
 @mixin font-details { // This one is an alias in the ID file
