--- a/templates/partials/_theater-header.html
+++ b/templates/partials/_theater-header.html
@@ -8,7 +8,7 @@
 <!-- checkerboard header w/ optional theater -->
 <div class="theater-header theater-wrap -closed">
   <div class="row -halves theater-cover-top">
-    <div class="row-block pull-to-top-h1">
+    <div class="row-block">
       <div class="module text-module background-white text-black">
         <div class="user-content">
           <p class="font-h1">{{ pageHeader.subheader }}</p>
