--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -50,7 +50,7 @@
 
   <!-- header w/ stat -->
   <div class="row -halves">
-    <div class="row-block pull-to-top-h1">
+    <div class="row-block">
       <div class="module text-module  ">
         <div class="font-h1 user-content">{{ subheader }}</div>
         <div class="buttons">
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    <div class="row-block pull-to-top">
+    <div class="row-block">
       {% set block = {
         statFigure: entry.numberOfPeople,
         statLabel: 'People',
